--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <img
           class="image"
-          src="./flower-shop-assignment/Asset/pngwing 10.png"
+          src="./Asset/pngwing 10.png"
           alt=""
         />
       </div>
@@ -45,7 +45,7 @@
 
         <img
           class="flower-image"
-          src="./flower-shop-assignment/Asset/pngwing 8.png"
+          src="./Asset/pngwing 8.png"
           alt=""
         />
       </div>
@@ -61,25 +61,25 @@
         <div class="bann-flower">
           <img
             class="f1-images"
-            src="./flower-shop-assignment/Asset/Flower 01.png"
+            src="./Asset/Flower 01.png"
             alt=""
           />
 
           <img
             class="f2-images"
-            src="./flower-shop-assignment/Asset/Rectangle 4.png"
+            src="./Asset/Rectangle 4.png"
             alt=""
           />
 
           <img
             class="f3-images"
-            src="./flower-shop-assignment/Asset/Rectangle 5.png"
+            src="./Asset/pngwing 5.png"
             alt=""
           />
 
           <img
             class="f4-images"
-            src="./flower-shop-assignment/Asset/Rectangle 6.png"
+            src="./Asset/pngwing 6.png"
             alt=""
           />
         </div>
