my assignment design

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
           <img
             class="f3-images"
-            src="./Asset/pngwing 5.png"
+            src="./Asset/Rectangle 5.png"
             alt=""
           />
 
           <img
             class="f4-images"
-            src="./Asset/pngwing 6.png"
+            src="./Asset/Rectangle 6.png"
             alt=""
           />
         </div>
@@ -88,11 +88,11 @@
   <div class="last-banner">
     <div class="last-header">
         <h2 class="deals">Get The Latest Deals</h2>
-        <p>$30 coupon for first shopping</p>
+        <p class="cupon">$30 coupon for first shopping</p>
     </div>
     <div class="input-type">
-        <input type="email" placeholder="Enter you email here.............." name="" id="">
-        <button>Subscribe</button>
+        <input class="email" type="email" placeholder="Enter you email here...................................." name="" id="">
+        <button class="sub">Subscribe</button>
     </div>
   </div>
     </main>
