--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
   <div class="last-banner">
     <div class="last-header">
-        <h2 class="deals">Get The Latest Deals</h2>
+        <h4 class="deals">Get The Latest Deals</h4>
         <p class="cupon">$30 coupon for first shopping</p>
     </div>
     <div class="input-type">
@@ -96,6 +96,14 @@
     </div>
   </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="main-footer">
+        <div class="hfooter">
+          <h2 class="fshop">Flower <span class="xshop">Shop</span></h2>
+          <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+          <p> <small> @2020-2023, FlowerShop.com. All rights reserved.</small> </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
