my overall first assignment

--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
           <button class="button">Shop Now</button>
         </div>
 
-        <img
-          class="image"
-          src="./Asset/pngwing 10.png"
-          alt=""
-        />
+        <img class="image" src="./Asset/pngwing 10.png" alt="" />
       </div>
     </header>
     <main>
@@ -43,11 +39,7 @@
           <button class="sign-up">sign up</button>
         </div>
 
-        <img
-          class="flower-image"
-          src="./Asset/pngwing 8.png"
-          alt=""
-        />
+        <img class="flower-image" src="./Asset/pngwing 8.png" alt="" />
       </div>
       <div class="four-ban">
         <div class="instagram">
@@ -59,49 +51,80 @@
           </p>
         </div>
         <div class="bann-flower">
-          <img
-            class="f1-images"
-            src="./Asset/Flower 01.png"
-            alt=""
-          />
+          <img class="f1-images" src="./Asset/Flower 01.png" alt="" />
 
-          <img
-            class="f2-images"
-            src="./Asset/Rectangle 4.png"
-            alt=""
-          />
+          <img class="f2-images" src="./Asset/Rectangle 4.png" alt="" />
 
-          <img
-            class="f3-images"
-            src="./Asset/Rectangle 5.png"
-            alt=""
-          />
+          <img class="f3-images" src="./Asset/Rectangle 5.png" alt="" />
 
-          <img
-            class="f4-images"
-            src="./Asset/Rectangle 6.png"
-            alt=""
-          />
+          <img class="f4-images" src="./Asset/Rectangle 6.png" alt="" />
         </div>
       </div>
-    
-  <div class="last-banner">
-    <div class="last-header">
-        <h4 class="deals">Get The Latest Deals</h4>
-        <p class="cupon">$30 coupon for first shopping</p>
-    </div>
-    <div class="input-type">
-        <input class="email" type="email" placeholder="Enter you email here...................................." name="" id="">
-        <button class="sub">Subscribe</button>
-    </div>
-  </div>
+
+      <div class="last-banner">
+        <div class="last-header">
+          <h4 class="deals">Get The Latest Deals</h4>
+          <p class="cupon">$30 coupon for first shopping</p>
+        </div>
+        <div class="input-type">
+          <input
+            class="email"
+            type="email"
+            placeholder="Enter you email here...................................."
+            name=""
+            id=""
+          />
+          <button class="sub">Subscribe</button>
+        </div>
+      </div>
+
+      <section class="Bonus">
+        <div class="Bonus-section">
+          <h2>Our Featured Flowers</h2>
+
+          <p class="b-pera">
+            It is a long established fact that a reader will be distracted by
+            the readable content of <br> a page when looking at its layout.
+          </p>
+        </div>
+        <div class="color">
+          <div class="flower-boll1">
+            <img class="img1" src="Asset/pngwing 6.png" alt="" />
+          </div>
+
+          <div class="flower-boll2">
+            <img class="img1" src="Asset/pngwing 5.png" alt="" />
+          </div>
+
+          <div class="flower-boll3">
+            <img class="img1" src="Asset/pngwing 7.png" alt="" />
+          </div>
+        </div>
+        <div class="text5">
+          <div>
+            <p class="text1">Pink Flower Tree1</p>
+          </div>
+          <div>
+            <p class="text1">Pink Flower Tree2</p>
+          </div>
+          <div>
+            <p class="text1">Pink Flower Tree3</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="main-footer">
         <div class="hfooter">
           <h2 class="fshop">Flower <span class="xshop">Shop</span></h2>
-          <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-          <p> <small> @2020-2023, FlowerShop.com. All rights reserved.</small> </p>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
+          <p>
+            <small> @2020-2023, FlowerShop.com. All rights reserved.</small>
+          </p>
         </div>
       </div>
     </footer>
